1.19.2 Port - Removed redundant features/code
In 1.19.2-19.0.0-beta ArmorPlus gets ported to MC 1.19.2
Keeps most of the 1.18.2 features
- World Gen is temporarily disabled, which means Lava & Frost crystals are unobtainable in this version.
- Villager Profession "Soul Exchanger" is temporarily unavailable.
- Biomes & Dimensional features were removed and will not be returning.
   - "Valley of Souls", "Frozen Plains", "Possessed Grounds"
- Some mobs will also not be returning (Frost Wolf, Alpha Frost Wolf, Demonic Dragon, Guardian Overlord)

New requirements:
* Requires Geckolib 3.0.23 or later
* Requires TheDragonLib 1.19-1.0.0 or later